--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,9 @@ li {
     font-weight: 100;
     line-height: 1.5;
 }
+li::first-letter {
+    text-transform: capitalize;
+}
 ul {
     margin: 0;
     padding: 0;
