--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,7 @@ body {
     font-family: Verdana, sans-serif;
     background: right/200% url("../images/sky-blueviolet.jpg");
     background-size: cover;
-    
-    background-repeat: repeat;
+    background-repeat: repeat-y;
     background-position: center;
     background-size: 1600px 1200px;
 }
@@ -13,6 +12,9 @@ h1 {
     font-weight: 100;
     line-height: 46px;
     margin-bottom: 10px;
+}
+input {
+    opacity: 0.6;
 }
 li {
     color: #431270;
@@ -42,7 +44,7 @@ margin-left: 0;
 }
 .weather-app-wrapper {
     margin: 10px auto; 
-    width: 1100px;
+    width: 1000px;
 }
 .weather-app {
     background-color: rgb(247 213 243 / 30%);
@@ -77,6 +79,9 @@ margin-left: 0;
 .icon-height {
     height: 150px;
 }
+.humidity-wind{
+    padding: 20px;
+}
 .wind-image {
     max-width: 10%;
 }
@@ -90,6 +95,9 @@ margin-left: 0;
 .weather-forecast-date {
     font-size: 18px;
     opacity: 0.8;
+}
+.weather-forecast-temperature-max{
+    font-weight: 600;
 }
 .weather-forecast-temperature-min {
     opacity: 0.8;
